selfhost/test/typechecker/bindingdecl/error_illegal_value_type_enum_container_variant.out
Error at %FILE_NAME%:5:13
Forbidden value
  |  val f = Foo.Bar
                 ^
This enum variant is non-constant and must be constructed
